# face_recognition

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  MainWindow.h  main.cpp  setup.py  test.py
